// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtFlex should render default slot content 1`] = `
<view
  class="at-row"
>
  <view />
</view>
`;

exports[`AtFlex should render default slot content 2`] = `
<view
  class="at-row"
>
  <view />
</view>
`;

exports[`AtFlex should render default slot content 3`] = `
<view
  class="at-row"
>
  <view />
</view>
`;

exports[`AtFlex should render default slot content 4`] = `
<view
  class="at-row"
>
  <view />
</view>
`;

exports[`AtFlex should render default slot content 5`] = `
<view
  class="at-row"
>
  <view />
</view>
`;

exports[`AtFlex should render prop align -- baseline 1`] = `
<view
  class="at-row at-row__align--baseline"
/>
`;

exports[`AtFlex should render prop align -- center 1`] = `
<view
  class="at-row at-row__align--center"
/>
`;

exports[`AtFlex should render prop align -- end 1`] = `
<view
  class="at-row at-row__align--end"
/>
`;

exports[`AtFlex should render prop align -- start 1`] = `
<view
  class="at-row at-row__align--start"
/>
`;

exports[`AtFlex should render prop align -- stretch 1`] = `
<view
  class="at-row at-row__align--stretch"
/>
`;

exports[`AtFlex should render prop alignContent -- around 1`] = `
<view
  class="at-row at-row__align-content--around"
/>
`;

exports[`AtFlex should render prop alignContent -- between 1`] = `
<view
  class="at-row at-row__align-content--between"
/>
`;

exports[`AtFlex should render prop alignContent -- center 1`] = `
<view
  class="at-row at-row__align-content--center"
/>
`;

exports[`AtFlex should render prop alignContent -- end 1`] = `
<view
  class="at-row at-row__align-content--end"
/>
`;

exports[`AtFlex should render prop alignContent -- start 1`] = `
<view
  class="at-row at-row__align-content--start"
/>
`;

exports[`AtFlex should render prop alignContent -- stretch 1`] = `
<view
  class="at-row at-row__align-content--stretch"
/>
`;

exports[`AtFlex should render prop direction -- column 1`] = `
<view
  class="at-row at-row__direction--column"
/>
`;

exports[`AtFlex should render prop direction -- column-reverse 1`] = `
<view
  class="at-row at-row__direction--column-reverse"
/>
`;

exports[`AtFlex should render prop direction -- row 1`] = `
<view
  class="at-row at-row__direction--row"
/>
`;

exports[`AtFlex should render prop direction -- row-reverse 1`] = `
<view
  class="at-row at-row__direction--row-reverse"
/>
`;

exports[`AtFlex should render prop justify -- around 1`] = `
<view
  class="at-row at-row__justify--around"
/>
`;

exports[`AtFlex should render prop justify -- between 1`] = `
<view
  class="at-row at-row__justify--between"
/>
`;

exports[`AtFlex should render prop justify -- center 1`] = `
<view
  class="at-row at-row__justify--center"
/>
`;

exports[`AtFlex should render prop justify -- end 1`] = `
<view
  class="at-row at-row__justify--end"
/>
`;

exports[`AtFlex should render prop justify -- start 1`] = `
<view
  class="at-row at-row__justify--start"
/>
`;

exports[`AtFlex should render prop wrap -- no-wrap 1`] = `
<view
  class="at-row at-row--no-wrap"
/>
`;

exports[`AtFlex should render prop wrap -- wrap 1`] = `
<view
  class="at-row at-row--wrap"
/>
`;

exports[`AtFlex should render prop wrap -- wrap-reverse 1`] = `
<view
  class="at-row at-row--wrap-reverse"
/>
`;

exports[`AtFlexItem should render default slot content 1`] = `
<view
  class="at-col"
>
  <view />
</view>
`;

exports[`AtFlexItem should render prop -- isAuto 1`] = `
<view
  class="at-col--auto at-col"
/>
`;

exports[`AtFlexItem should render prop -- isWrap 1`] = `
<view
  class="at-col--wrap at-col"
/>
`;

exports[`AtFlexItem should render prop align -- bottom 1`] = `
<view
  class="at-col__align--bottom at-col"
/>
`;

exports[`AtFlexItem should render prop align -- center 1`] = `
<view
  class="at-col__align--center at-col"
/>
`;

exports[`AtFlexItem should render prop align -- top 1`] = `
<view
  class="at-col__align--top at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 1 1`] = `
<view
  class="at-col__offset-1 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 2 1`] = `
<view
  class="at-col__offset-2 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 3 1`] = `
<view
  class="at-col__offset-3 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 4 1`] = `
<view
  class="at-col__offset-4 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 5 1`] = `
<view
  class="at-col__offset-5 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 6 1`] = `
<view
  class="at-col__offset-6 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 7 1`] = `
<view
  class="at-col__offset-7 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 8 1`] = `
<view
  class="at-col__offset-8 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 9 1`] = `
<view
  class="at-col__offset-9 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 10 1`] = `
<view
  class="at-col__offset-10 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 11 1`] = `
<view
  class="at-col__offset-11 at-col"
/>
`;

exports[`AtFlexItem should render prop offset -- 12 1`] = `
<view
  class="at-col__offset-12 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 1 1`] = `
<view
  class="at-col-1 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 2 1`] = `
<view
  class="at-col-2 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 3 1`] = `
<view
  class="at-col-3 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 4 1`] = `
<view
  class="at-col-4 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 5 1`] = `
<view
  class="at-col-5 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 6 1`] = `
<view
  class="at-col-6 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 7 1`] = `
<view
  class="at-col-7 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 8 1`] = `
<view
  class="at-col-8 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 9 1`] = `
<view
  class="at-col-9 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 10 1`] = `
<view
  class="at-col-10 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 11 1`] = `
<view
  class="at-col-11 at-col"
/>
`;

exports[`AtFlexItem should render prop size -- 12 1`] = `
<view
  class="at-col-12 at-col"
/>
`;
